# qml-flight-instruments

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  QtAppSetup.cmake  conanfile.py
application/: CMakeLists.txt
application/src/cpp/: animation.cpp  main.cpp  primary_flight_data.cpp
application/src/include/: animation.h
application/ui/: qml_flight_instruments.qrc
application/ui/icons/: conor_co.icns
application/ui/qml/: basic_six.qml  efis.qml  misc.qml
application/ui/qml/basic-six/: airspeed_indicator.qml  altimeter.qml  attitude_indicator.qml  heading_indicator.qml  turn_coordinator.qml  vertical_speed_indicator.qml
application/ui/qml/efis/eadi/: airspeed_indicator.qml  altimeter.qml  attitude_indicator.qml  electronic_attitude_direction_indicator.qml  heading_indicator.qml  vertical_speed_indicator.qml
application/ui/qml/efis/ehsi/: electronic_horizontal_situation_inidicator.qml
application/ui/qml/misc/egt-fuel-flow-gauge/: egt_fuel_flow_gauge.qml  egt_gauge.qml  fuel_flow_gauge.qml
application/ui/qml/misc/propeller-gauge/: propeller_gauge.qml  propeller_gauge_style.qml
application/ui/qml/misc/tank-gauge/: base_tank_gauge.qml  circular_gauge.qml  circular_gauge_style.qml  tank_gauge.qml
application/ui/qml/misc/temperature-pressure-gauge/: pressure_gauge.qml  temperature_gauge.qml  temperature_pressure_gauge.qml
application/ui/qml/misc/util/: custom_foreground.qml
application/ui/qml/misc/vac-amp-gauge/: amp_gauge.qml  vac_amp_gauge.qml  vac_gauge.qml
